# TFM

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile.mcp_proxy_with_docker  ingest_knowledge.py  main.py  manager_weviate.py  mcp_test.py  pyproject.toml  temp_test_runner.py  test.docker.py  test.ipynb  test.py  test_agents.ipynb  test_crew.py  test_duplicate_keys.yaml  test_file_edit_line_ops.py  test_file_edit_tool.py  test_flow.py  test_retry.py  test_tools.py  test_validator.py  test_versioning.py  test_versioning_utils.py  test_yaml_editor.py  test_yaml_validator.py
config/knowledge/: knowledge copy.yaml  knowledge.yaml
config/mcp_server/: config.json
config/weviate/: db_config.yaml
knowledge/: .keepgit
old/: devops_crew__initial_config copy 2.py  docker-compose copy.yml  dockerfile.mcp_proxy_with_docker  mcp_test.py  test.py  test_blackboard_tool.py  test_crew_ai.py  test_file_tools_with_versioning.py  test_file_version_history_tools.py  test_ingest.ipynb  test_kubernetes_client.py  test_regis.py
src/: containers.py
src/crewai/agents/: yaml_coding_agent.py
src/crewai/crews/agentic_rag_crew/: agentic_rag_crew.py
src/crewai/crews/agentic_rag_crew/agents/: agents.yaml
src/crewai/crews/agentic_rag_crew/tasks/: tasks.yaml
src/crewai/crews/devops_crew/: devops_crew.py
src/crewai/crews/devops_crew/agents/: agents.yaml
src/crewai/crews/devops_crew/tasks/: tasks.yaml
src/crewai/devops_flow/: DevopsFlow.py  MainFlow.py  MaintState.py
src/crewai/devops_flow/blackboard/: Blackboard.py
src/crewai/devops_flow/blackboard/utils/: Events.py  GeneralInfo.py  Image.py  Interaction.py  Issue.py  Manifest.py  Project.py  Record.py
src/crewai/devops_flow/crews/devops_crew/: BaseCrew.py  BaseCrewForTests.py  BasicImproveCrew.py  ConsultCrew.py  DefinePreliminartStructureCrew.py  DevopsCrew.py  TestCrew.py  (+11 more)
src/crewai/guardrails/: guardrails.py
src/crewai/tools/: blackboard_tool.py  config_validator.py  docker_registry_tool.py  docker_tool.py  file_edit_tool.py  file_version_history_tool.py  kubectl_tool.py  popeye_scan_tool.py  rag_tool.py  stack_tool.py  web_browser_tool.py  yaml_editor_tools.py  yaml_tools.py
src/crewai/tools/utils/: checkov_validator.py  docker_dry_run.py  docker_registry_client.py  docker_utils.py  docker_validator.py  k8s_dry_run.py  kubernetes_validator.py  popeye_scan.py  safe_kubectl.py  yaml_toolkit.py  yaml_validator.py
src/database/: weviate.py
src/embeddings/: late_chunking.py
src/ingest/: ingest_helper.py
src/k8s/: cluster.py  kind.py
src/retry_mechanism/: retry.py
src/services_registry/: services.py
src/static/: index.html
src/static/js/: app.js
src/static/js/pages/: BlackboardPage.js  HomePage.js
src/static/js/router/: index.js
src/static/js/services/: api.js
src/version_control/: versioning_utils.py
src/web/: .gitignore  README.md  app.py  state.py
src/web/api/: __init__.py  routes.py
src/web/static/: index.html
src/web/static/js/: app.js
temp/: k8s-prod-nginx-postgres.yaml  kubernetes_overview.txt  nginx-deployment.yaml  nginx-prod.yaml
temp/k8s/: nginx-deployment.yaml
temp/nginx/: nginx-deployment.yaml
test_to delete/: test_checkov_tool.py  test_dockerfile_tool.py  test_kubernetes_validate_tool.py
(+38 files in other folders)
